# dxpdf

./: BENCHMARKS.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: bench-linux.yml  ci.yml  publish.yml  python.yml
benches/: convert_bench.rs  parse_bench.rs
crates/dxpdf-docx/: Cargo.toml
crates/dxpdf-docx-model/: Cargo.toml
crates/dxpdf-docx-model/src/: dimension.rs  geometry.rs  model.rs
crates/dxpdf-docx-model/src/model/: content.rs  document.rs  drawing.rs  formatting.rs  mod.rs  paragraph.rs  run_properties.rs  section.rs  settings.rs  table.rs
crates/dxpdf-docx/benches/: parse_bench.rs
crates/dxpdf-docx/examples/: dump.rs
crates/dxpdf-docx/src/: dimension.rs  error.rs  lib.rs  model.rs  xml.rs  zip.rs
crates/dxpdf-docx/src/parse/: body.rs  drawing.rs  fonts.rs  mod.rs  notes.rs  numbering.rs  properties.rs  settings.rs  styles.rs  theme.rs
crates/dxpdf-docx/tests/: parse_test_files.rs
crates/dxpdf-field/: Cargo.toml
crates/dxpdf-field/src/: ast.rs  error.rs  eval.rs  format.rs  lib.rs  parse.rs  switches.rs
crates/dxpdf-model/: Cargo.toml
crates/dxpdf-model/src/: dimension.rs  geometry.rs  lib.rs  model.rs
crates/dxpdf-renderer/: Cargo.toml
crates/dxpdf-renderer/examples/: convert.rs  debug_blocks.rs  debug_blocks2.rs  debug_render.rs  debug_spacing.rs
crates/dxpdf-renderer/src/: dimension.rs  fonts.rs  geometry.rs  lib.rs  painter.rs  skia_conv.rs
crates/dxpdf-renderer/src/layout/: build.rs  cell.rs  draw_command.rs  float.rs  fragment.rs  header_footer.rs  line.rs  measurer.rs  mod.rs  page.rs  paragraph.rs  section.rs  table.rs
crates/dxpdf-renderer/src/resolve/: color.rs  conditional.rs  fonts.rs  images.rs  mod.rs  numbering.rs  properties.rs  sections.rs  styles.rs
crates/dxpdf-renderer/tests/: render_integration.rs
docs/: README.md  fields.md  floating-images.md  floating-tables.md  headers-footers.md  line-spacing.md  paragraph-spacing.md  style-cascade.md
examples/: convert.rs  dump.rs
python/dxpdf/: __init__.py  dxpdf.pyi
scripts/: compare_pdfs.py  verify_wheel.py
src/: dimension.rs  error.rs  geometry.rs  lib.rs  main.rs  model.rs  units.rs
src/docx/: error.rs  mod.rs  relationships.rs  whitespace_workaround.rs  xml.rs  zip.rs
src/docx/parse/: body.rs  body_legacy.rs  body_schema.rs  drawing.rs  fonts.rs  mod.rs  notes.rs  numbering.rs  properties.rs  rel_rewrite.rs  serde_xml.rs  settings.rs  styles.rs  theme.rs  vml.rs
src/docx/parse/drawing/: anchor.rs  color.rs  geometry.rs  inline.rs  mod.rs  picture.rs  shape.rs
src/docx/parse/drawing/schema/: anchor.rs  color.rs  effect.rs  fill.rs  geometry.rs  mod.rs  picture.rs  shape.rs  stroke.rs
src/docx/parse/primitives/: colors.rs  mod.rs  st_enums.rs  toggles.rs  units.rs
src/docx/parse/properties/: mod.rs  paragraph.rs  run.rs  section.rs  table.rs
src/docx/parse/properties/schema/: border.rs  cnf_style.rs  fonts.rs  insets.rs  lang.rs  measure.rs  mod.rs  paragraph.rs  run.rs  section.rs  shading.rs  table.rs  tabs.rs
src/docx/parse/theme/: color.rs  font.rs  mod.rs  script.rs
src/docx/parse/vml/: color.rs  formulas.rs  mod.rs  path_commands.rs  schema.rs  style.rs
src/field/: context.rs  eval.rs  format.rs  mod.rs  parse.rs  switches.rs
src/model/: dimension.rs  geometry.rs  mod.rs
src/model/model/: content.rs  drawing.rs  formatting.rs  identifiers.rs  table.rs  theme.rs
src/model/types/: color.rs  document.rs  drawing.rs  drawing_color.rs  formatting.rs  mod.rs  numbering.rs  paragraph.rs  run_properties.rs  section.rs  settings.rs  styles.rs  table.rs  theme.rs  vml.rs
src/parse/: archive.rs  mod.rs  numbering.rs  styles.rs  xml.rs
src/parse/xml/: drawing.rs  helpers.rs  mod.rs  properties.rs  section.rs  tests.rs
src/render/: dimension.rs  emf.rs  error.rs  fonts.rs  geometry.rs  layout.rs  mod.rs  painter.rs  skia_conv.rs
src/render/emoji/: cluster.rs  mod.rs  raster.rs  resolve.rs  shape.rs
src/render/layout/: build.rs  cell.rs  context.rs  draw_command.rs  float.rs  fragment.rs  header_footer.rs  line.rs  measure.rs  measurer.rs  mod.rs  page.rs  paragraph.rs  section.rs  table.rs  tests.rs
src/render/layout/fragment/: collect.rs  mod.rs  segment.rs  text.rs
src/render/layout/paragraph/: borders.rs  line_emit.rs  mod.rs  types.rs
src/render/layout/section/: helpers.rs  layout.rs  mod.rs  stacker.rs  types.rs
src/render/layout/table/: borders.rs  emit.rs  grid.rs  measure.rs  mod.rs  split.rs  types.rs
src/render/resolve/: color.rs  conditional.rs  drawing_color.rs  fonts.rs  header_footer.rs  images.rs  mod.rs  numbering.rs  properties.rs  sections.rs  shape_visuals.rs  styles.rs
src/render/resolve/shape_geometry/: guides.rs  mod.rs
src/render/subset/: apply.rs  collect.rs  extract.rs  format.rs  mod.rs  name_splice.rs
test-files/: sample-docx-files-sample-5.docx  sample-emoji.docx
tests/: api_compat.rs  emoji_e2e.rs  header_footer_selection.rs  header_part_rels.rs  integration.rs  parse_test_files.rs  phase2_spike.rs  render_integration.rs  serde_spike.rs
