[package]
name = "dxpdf"
version = "0.1.0"
edition = "2021"
description = "A fast DOCX-to-PDF converter powered by Skia"

[dependencies]
clap = { version = "4", features = ["derive"] }
quick-xml = "0.37"
zip = { version = "2", default-features = false, features = ["deflate"] }
skia-safe = "0.93"
thiserror = "2"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"
