[package]
name = "dxpdf"
version = "0.1.0"
edition = "2021"
description = "A fast DOCX-to-PDF converter powered by Skia"
license = "MIT"
repository = "https://github.com/nerdy-pro/dxpdf"
homepage = "https://nerdy.pro"
documentation = "https://docs.rs/dxpdf"
readme = "README.md"
keywords = ["docx", "pdf", "converter", "word", "ooxml"]
categories = ["command-line-utilities", "text-processing"]
exclude = ["test-cases/", "scripts/", "VISUAL_COMPARISON.md", "BENCHMARKS.md"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
clap = { version = "4", features = ["derive"] }
quick-xml = "0.37"
zip = { version = "2", default-features = false, features = ["deflate"] }
skia-safe = "0.93"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
pyo3 = { version = "0.24", features = ["extension-module"], optional = true }

[features]
default = []
python = ["pyo3"]

[dev-dependencies]
tempfile = "3"
