[build-system]
requires = ["maturin>=1.7"]
build-backend = "maturin"

[project]
name = "dxpdf"
version = "0.1.0"
description = "A fast DOCX-to-PDF converter powered by Skia, written in Rust"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["docx", "pdf", "converter", "word", "ooxml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Office/Business",
    "Topic :: Text Processing",
]

[project.urls]
Homepage = "https://nerdy.pro"
Repository = "https://github.com/nerdy-pro/dxpdf"
Documentation = "https://github.com/nerdy-pro/dxpdf#readme"

[tool.maturin]
features = ["python"]
